ssh: Added the ssh tab
- Created SSHTabWidget class with SSH connection management                                 │
- Added SSH address input supporting user@host and user@host -p port formats                │
- Implemented connection status display with color-coded indicators                         │
- Added 2-row command interface similar to Command Builder                                  │
- Integrated SSH tab into MainWindow tab widget                                             │
- Fixed signal-slot connections and initialization order warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,7 @@ set(SOURCES
   src/main.cpp
   src/mainwindow.cpp
   src/commandwidget.cpp
+  src/sshtabwidget.cpp
   src/sshmanager.cpp
   src/ros2executor.cpp
   src/processmonitor.cpp
@@ -45,6 +46,7 @@ set(SOURCES
 set(HEADERS
   include/mainwindow.h
   include/commandwidget.h
+  include/sshtabwidget.h
   include/sshmanager.h
   include/ros2executor.h
   include/processmonitor.h
