ssh: adds ssh server status in status bar
- keep alive on ssh session
- immediate red / green feedback

--- a/settings.toml
+++ b/settings.toml
@@ -36,7 +36,7 @@ key_file = "~/.ssh/id_rsa"
 
 [ssh]
 # SSH default values
-default_address = "ubuntu@raspberrypi"
+default_address = "dingo@turtlebot3"
 default_commands = [
     ["watch df", "-h"],
     ["htop", ""]
