--- a/settings.toml
+++ b/settings.toml
@@ -7,25 +7,31 @@ font_family = "Ubuntu Mono"
 
 [controls]
 # Default options for the 3-row control widget
-row1_dropdown1_options = ["ros2 launch turtlebot3_bringup pc_slam.launch.py", "rostopic", "rosnode", "rosservice"]
-row1_dropdown1_default = "ros2 launch turtlebot3_bringup pc_slam.launch.py"
-row1_dropdown2_options = ["", "launch", "run", "pkg", "node"]
+row1_dropdown1_options = ["ros2 launch xbox_teleop_stamped.launch.py", "", "", ""]
+row1_dropdown1_default = "ros2 launch xbox_teleop_stamped.launch.py"
+row1_dropdown2_options = [""]
 row1_dropdown2_default = ""
 
-row2_dropdown1_options = ["turtlebot3_bringup", "turtlebot3_navigation2", "turtlebot3_slam"]
-row2_dropdown1_default = "turtlebot3_bringup"
-row2_dropdown2_options = ["robot.launch.py", "navigation2.launch.py", "slam.launch.py"]
-row2_dropdown2_default = "robot.launch.py"
+row2_dropdown1_options = ["ros2 launch turtlebot3_bringup pc_slam.launch.py"]
+row2_dropdown1_default = "ros2 launch turtlebot3_bringup pc_slam.launch.py"
+row2_dropdown2_options = ["slam_params_file:=src/turtlebot3/turtlebot3_bringup/param/mapper_params_confined.yaml", " "]
+row2_dropdown2_default = " "
 
 row3_dropdown1_options = ["ros2 launch turtlebot3_navigation2 navigation2.launch.py", "", ""]
 row3_dropdown1_default = "ros2 launch turtlebot3_navigation2 navigation2.launch.py"
-row3_dropdown2_options = ["keyboard", "joy", "twist_mux"]
-row3_dropdown2_default = "keyboard"
+row3_dropdown2_options = ["params_file:=/home/dingo/Programming/tb3_autonomy/src/turtlebot3/turtlebot3_bringup/param/burger_nav_basic.yaml", "params_file:=/home/dingo/Programming/tb3_autonomy/src/turtlebot3/turtlebot3_bringup/param/burger_nav_improved.yaml", "  "]
+row3_dropdown2_default = "params_file:=/home/dingo/Programming/tb3_autonomy/src/turtlebot3/turtlebot3_bringup/param/burger_nav_improved.yaml"
+
+row4_dropdown1_options = ["source install/setup.bash", "rqt", "ros2 topic list"]
+row4_dropdown1_default = "source install/setup.bash"
+row4_dropdown2_options = [""]
+row4_dropdown2_default = ""
 
 [ros2]
 workspace = "~/ros2_ws"
 domain_id = 0
 turtlebot3_model = "burger"
+working_directory = "~/Programming/tb3_autonomy"
 
 [connection]
 default_host = "192.168.1.100"
